@@ -1,9 +1,9 @@
 package com.cMall.feedShop.product.application.service;
 
 import com.cMall.feedShop.product.application.dto.response.ProductDetailResponse;
+import com.cMall.feedShop.product.application.dto.response.ProductListResponse;
 import com.cMall.feedShop.product.application.dto.response.ProductPageResponse;
 import com.cMall.feedShop.product.domain.exception.ProductException;
-import com.cMall.feedShop.product.application.calculator.DiscountCalculator;
 import com.cMall.feedShop.product.domain.enums.*;
 import com.cMall.feedShop.product.domain.model.Category;
 import com.cMall.feedShop.product.domain.model.Product;
@@ -25,7 +25,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -41,8 +40,11 @@ import static org.mockito.Mockito.times;
 @DisplayName("ProductReadService 테스트")
 class ProductReadServiceTest {
 
-    @Mock private ProductRepository productRepository;
-    @Mock private DiscountCalculator discountCalculator;
+    @Mock
+    private ProductRepository productRepository;
+
+    @Mock
+    private ProductMapper productMapper;
 
     @InjectMocks
     private ProductReadService productReadService;
@@ -51,12 +53,16 @@ class ProductReadServiceTest {
     private Product product2;
     private Store store;
     private Category category;
+    private ProductListResponse listResponse1;
+    private ProductListResponse listResponse2;
+    private ProductDetailResponse detailResponse;
 
     @BeforeEach
     void setUp() {
         setupStore();
         setupCategory();
         setupProducts();
+        setupResponses();
     }
 
     private void setupStore() {
@@ -76,47 +82,78 @@ class ProductReadServiceTest {
         product1 = Product.builder()
                 .name("상품1")
                 .price(new BigDecimal("50000"))
-                .store(store)
-                .category(category)
                 .discountType(DiscountType.RATE_DISCOUNT)
                 .discountValue(new BigDecimal("10"))
-                .description("상품1 설명")
+                .store(store)
+                .category(category)
+                .description("상품 1 설명")
                 .build();
         ReflectionTestUtils.setField(product1, "productId", 1L);
-        ReflectionTestUtils.setField(product1, "createdAt", LocalDateTime.now());
-        ReflectionTestUtils.setField(product1, "updatedAt", LocalDateTime.now());
 
-        // 상품1에 이미지 추가
-        ProductImage mainImage1 = new ProductImage("http://main1.jpg", ImageType.MAIN, product1);
-        product1.getProductImages().add(mainImage1);
+        // 상품 1에 이미지와 옵션 추가
+        ProductImage image1 = new ProductImage("http://image1.jpg", ImageType.MAIN, product1);
+        product1.getProductImages().add(image1);
+
+        ProductOption option1 = new ProductOption(Gender.UNISEX, Size.SIZE_250, Color.BLACK, 100, product1);
+        ProductOption option2 = new ProductOption(Gender.UNISEX, Size.SIZE_260, Color.WHITE, 50, product1);
+        product1.getProductOptions().addAll(Arrays.asList(option1, option2));
 
         product2 = Product.builder()
                 .name("상품2")
                 .price(new BigDecimal("30000"))
+                .discountType(DiscountType.NONE)
                 .store(store)
                 .category(category)
-                .discountType(DiscountType.NONE)
+                .description("상품 2 설명")
                 .build();
         ReflectionTestUtils.setField(product2, "productId", 2L);
-        ReflectionTestUtils.setField(product2, "createdAt", LocalDateTime.now());
-        ReflectionTestUtils.setField(product2, "updatedAt", LocalDateTime.now());
+    }
 
-        // 상품2에 이미지 추가
-        ProductImage mainImage2 = new ProductImage("http://main2.jpg", ImageType.MAIN, product2);
-        product2.getProductImages().add(mainImage2);
+    private void setupResponses() {
+        listResponse1 = ProductListResponse.builder()
+                .productId(1L)
+                .name("상품1")
+                .price(new BigDecimal("50000"))
+                .discountPrice(new BigDecimal("45000"))
+                .mainImageUrl("http://image1.jpg")
+                .categoryId(1L)
+                .storeId(1L)
+                .storeName("테스트 스토어")
+                .build();
+
+        listResponse2 = ProductListResponse.builder()
+                .productId(2L)
+                .name("상품2")
+                .price(new BigDecimal("30000"))
+                .discountPrice(new BigDecimal("30000"))
+                .mainImageUrl("http://image2.jpg")
+                .categoryId(1L)
+                .storeId(1L)
+                .storeName("테스트 스토어")
+                .build();
+
+        detailResponse = ProductDetailResponse.builder()
+                .productId(1L)
+                .name("상품1")
+                .price(new BigDecimal("50000"))
+                .discountPrice(new BigDecimal("45000"))
+                .storeName("테스트 스토어")
+                .categoryName("운동화")
+                .description("상품 1 설명")
+                .build();
     }
 
     @Test
-    @DisplayName("상품 목록 조회 성공 - 기본 파라미터")
-    void getProductList_Success_DefaultParams() {
+    @DisplayName("상품 목록 조회 성공")
+    void getProductList_Success() {
         // given
         List<Product> products = Arrays.asList(product1, product2);
         Page<Product> productPage = new PageImpl<>(products, PageRequest.of(0, 20), 2);
 
-        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class))).willReturn(productPage);
-        given(discountCalculator.calculateDiscountPrice(any(), any(), any()))
-                .willReturn(new BigDecimal("45000"))
-                .willReturn(new BigDecimal("30000"));
+        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class)))
+                .willReturn(productPage);
+        given(productMapper.toListResponse(product1)).willReturn(listResponse1);
+        given(productMapper.toListResponse(product2)).willReturn(listResponse2);
 
         // when
         ProductPageResponse response = productReadService.getProductList(0, 20);
@@ -125,40 +162,29 @@ class ProductReadServiceTest {
         assertThat(response).isNotNull();
         assertThat(response.getContent()).hasSize(2);
         assertThat(response.getTotalElements()).isEqualTo(2);
-        assertThat(response.getNumber()).isEqualTo(0);
-        assertThat(response.getSize()).isEqualTo(20);
+        assertThat(response.getContent().get(0).getName()).isEqualTo("상품1");
+        assertThat(response.getContent().get(1).getName()).isEqualTo("상품2");
 
         verify(productRepository, times(1)).findAllByOrderByCreatedAtDesc(any(Pageable.class));
     }
 
     @Test
-    @DisplayName("상품 목록 조회 성공 - 음수 페이지는 0으로 조정")
-    void getProductList_Success_NegativePageAdjusted() {
+    @DisplayName("상품 목록 조회 - 잘못된 페이지 파라미터 처리")
+    void getProductList_InvalidParameters_ShouldUseDefaults() {
         // given
-        Page<Product> productPage = new PageImpl<>(List.of(), PageRequest.of(0, 20), 0);
-        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class))).willReturn(productPage);
+        List<Product> products = Arrays.asList(product1);
+        Page<Product> productPage = new PageImpl<>(products, PageRequest.of(0, 20), 1);
 
-        // when
-        ProductPageResponse response = productReadService.getProductList(-5, 20);
+        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class)))
+                .willReturn(productPage);
+        given(productMapper.toListResponse(product1)).willReturn(listResponse1);
+
+        // when - 음수 페이지와 큰 사이즈로 호출
+        ProductPageResponse response = productReadService.getProductList(-1, 200);
 
         // then
-        assertThat(response.getNumber()).isEqualTo(0);
-    }
-
-    @Test
-    @DisplayName("상품 목록 조회 성공 - 잘못된 사이즈는 20으로 조정")
-    void getProductList_Success_InvalidSizeAdjusted() {
-        // given
-        Page<Product> productPage = new PageImpl<>(List.of(), PageRequest.of(0, 20), 0);
-        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class))).willReturn(productPage);
-
-        // when
-        ProductPageResponse response1 = productReadService.getProductList(0, 0);
-        ProductPageResponse response2 = productReadService.getProductList(0, 150);
-
-        // then
-        assertThat(response1.getSize()).isEqualTo(20);
-        assertThat(response2.getSize()).isEqualTo(20);
+        assertThat(response).isNotNull();
+        verify(productRepository, times(1)).findAllByOrderByCreatedAtDesc(any(Pageable.class));
     }
 
     @Test
@@ -166,15 +192,8 @@ class ProductReadServiceTest {
     void getProductDetail_Success() {
         // given
         Long productId = 1L;
-
-        // 상품 옵션 추가
-        ProductOption option1 = new ProductOption(Gender.UNISEX, Size.SIZE_250, Color.WHITE, 10, product1);
-        ProductOption option2 = new ProductOption(Gender.UNISEX, Size.SIZE_255, Color.BLACK, 5, product1);
-        product1.getProductOptions().addAll(Arrays.asList(option1, option2));
-
         given(productRepository.findByProductId(productId)).willReturn(Optional.of(product1));
-        given(discountCalculator.calculateDiscountPrice(any(), any(), any()))
-                .willReturn(new BigDecimal("45000"));
+        given(productMapper.toDetailResponse(product1)).willReturn(detailResponse);
 
         // when
         ProductDetailResponse response = productReadService.getProductDetail(productId);
@@ -187,8 +206,6 @@ class ProductReadServiceTest {
         assertThat(response.getDiscountPrice()).isEqualTo(new BigDecimal("45000"));
         assertThat(response.getStoreName()).isEqualTo("테스트 스토어");
         assertThat(response.getCategoryName()).isEqualTo("운동화");
-        assertThat(response.getImages()).hasSize(1);
-        assertThat(response.getOptions()).hasSize(2);
 
         verify(productRepository, times(1)).findByProductId(productId);
     }
@@ -207,26 +224,24 @@ class ProductReadServiceTest {
         );
 
         assertThat(thrown.getErrorCode().getMessage()).contains("상품을 찾을 수 없습니다");
+        verify(productRepository, times(1)).findByProductId(productId);
     }
 
     @Test
-    @DisplayName("상품 상세 조회 성공 - 옵션과 이미지가 없는 경우")
-    void getProductDetail_Success_NoOptionsNoImages() {
+    @DisplayName("빈 상품 목록 조회")
+    void getProductList_EmptyResult() {
         // given
-        Long productId = 2L;
-        product2.getProductImages().clear();
+        Page<Product> emptyPage = new PageImpl<>(Arrays.asList(), PageRequest.of(0, 20), 0);
 
-        given(productRepository.findByProductId(productId)).willReturn(Optional.of(product2));
-        given(discountCalculator.calculateDiscountPrice(any(), any(), any()))
-                .willReturn(new BigDecimal("30000"));
+        given(productRepository.findAllByOrderByCreatedAtDesc(any(Pageable.class)))
+                .willReturn(emptyPage);
 
         // when
-        ProductDetailResponse response = productReadService.getProductDetail(productId);
+        ProductPageResponse response = productReadService.getProductList(0, 20);
 
         // then
         assertThat(response).isNotNull();
-        assertThat(response.getImages()).isEmpty();
-        assertThat(response.getOptions()).isEmpty();
-        assertThat(response.getWishNumber()).isEqualTo(0);
+        assertThat(response.getContent()).isEmpty();
+        assertThat(response.getTotalElements()).isEqualTo(0);
     }
 }
